--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
     </div>
 
     <script>
-      let socket = new WebSocket(`ws://192.168.31.21:8080/ws/chat`);
+      let socket = new WebSocket(`ws://localhost:8080/ws/chat`);
 
       socket.onopen = () => {
         const customName = prompt("Enter your name: ");
