--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,39 +3,207 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Channels</title>
+    <title>Live Chatroom</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
+      body {
+        font-family: Arial, sans-serif;
+        background-color: #f4f7fc;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        padding: 20px;
+      }
+
+      .chat-container {
+        background-color: #fff;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        width: 100%;
+        max-width: 600px;
+        padding: 20px;
+      }
+
+      h1 {
+        text-align: center;
+        background-color: #333;
+        color: white;
+        padding: 10px;
+        margin-bottom: 20px;
+        border-radius: 8px;
+      }
+
+      #live {
+        display: block;
+        text-align: center;
+        font-size: 18px;
+        color: green;
+        margin: 10px 0;
+      }
+
+      .message-input {
+        display: flex;
+        margin-top: 20px;
+        gap: 10px;
+      }
+
+      #message {
+        flex: 1;
+        padding: 10px;
+        font-size: 16px;
+        border: 2px solid #ccc;
+        border-radius: 5px;
+        outline: none;
+      }
+
+      #message:focus {
+        border-color: #007bff;
+      }
+
+      #send {
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 16px;
+      }
+
+      #send:hover {
+        background-color: #0056b3;
+      }
+
+      #messages {
+        margin-top: 20px;
+        max-height: 300px;
+        overflow-y: auto;
+        padding-right: 5px;
+        scroll-behavior: smooth;
+      }
+
+      #messageList {
+        list-style-type: none;
+        padding: 0;
+      }
+
+      .message-item {
+        margin-bottom: 15px;
+        padding: 10px 15px;
+        border-radius: 8px;
+        position: relative;
+        word-wrap: break-word;
+        max-width: 75%;
+        font-size: 15px;
+        line-height: 1.4;
+      }
+
+      .mine {
+        background-color: #d0f0fd;
+        margin-left: auto;
+        text-align: right;
+      }
+
+      .theirs {
+        background-color: #f1f1f1;
+        margin-right: auto;
+        text-align: left;
+      }
+
+      .timestamp {
+        font-size: 12px;
+        color: #888;
+        margin-top: 5px;
+      }
+
+      #messages::-webkit-scrollbar {
+        width: 6px;
+      }
+
+      #messages::-webkit-scrollbar-thumb {
+        background-color: #007bff;
+        border-radius: 10px;
+      }
+    </style>
   </head>
   <body>
-    <div>
-      <input type="text" id="message" placeholder="Enter your message" />
-      <button id="send" onclick="sendMessage()">Send</button>
-    </div>
+    <div class="chat-container">
+      <h1>Live Chatroom</h1>
+      <span id="live">Active Users: 0</span>
 
-    <div id="messages">
-      <ul id="messageList"></ul>
+      <div class="message-input">
+        <input type="text" id="message" placeholder="Enter your message" />
+        <button id="send" onclick="sendMessage()">Send</button>
+      </div>
+
+      <div id="messages">
+        <ul id="messageList"></ul>
+      </div>
     </div>
 
     <script>
-      let socket = new WebSocket(`ws://192.168.31.21:8080/ws/chat`);
+      let socket = new WebSocket(`ws://localhost:8080/ws/chat`);
+      let myName = "";
 
       socket.onopen = () => {
-        const customName = prompt("Enter your name: ");
-        socket.send(JSON.stringify({ type: "init", customName }));
-        console.log("Connected to WebSocket server.");
-        // Send a request to get the active connection count
+        myName = prompt("Enter your name: ");
+        socket.send(JSON.stringify({ type: "init", customName: myName }));
         socket.send(JSON.stringify({ action: "getConnectionCount" }));
       };
 
       socket.onmessage = (event) => {
-        const li = document.createElement("li");
-        li.textContent = event.data;
-        document.getElementById("messageList").appendChild(li);
+        try {
+          const data = JSON.parse(event.data);
+
+          if (data.from && data.message) {
+            const li = document.createElement("li");
+            li.className = `message-item ${
+              data.from === myName ? "mine" : "theirs"
+            }`;
+
+            const now = new Date();
+            const time = now.toLocaleTimeString([], {
+              hour: "2-digit",
+              minute: "2-digit",
+            });
+            const date = now.toLocaleDateString();
+
+            li.innerHTML = `
+              <strong>${data.from}</strong>: ${data.message}
+              <div class="timestamp">${date} ${time}</div>
+            `;
+
+            document.getElementById("messageList").appendChild(li);
+            autoScrollToBottom();
+          }
+
+          if (data.from === "server" && data.activeConnections !== undefined) {
+            document.getElementById(
+              "live"
+            ).textContent = `Active Users: ${data.activeConnections - 1}`;
+          }
+        } catch (error) {
+          console.error("Error parsing message as JSON:", error);
+        }
       };
 
       function sendMessage() {
-        let message = document.getElementById("message").value;
-        socket.send(message);
-        document.getElementById("message").value = ""; // Clear the input field after sending
+        const message = document.getElementById("message").value;
+        if (message.trim() !== "") {
+          socket.send(message);
+          document.getElementById("message").value = "";
+        }
+      }
+
+      function autoScrollToBottom() {
+        const messagesContainer = document.getElementById("messages");
+        messagesContainer.scrollTop = messagesContainer.scrollHeight;
       }
     </script>
   </body>
