--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -18,7 +18,7 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        padding: 20px;
+        padding: 10px;
       }
 
       .chat-container {
@@ -27,7 +27,10 @@
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         width: 100%;
         max-width: 600px;
-        padding: 20px;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        height: 90vh;
       }
 
       h1 {
@@ -35,22 +38,20 @@
         background-color: #333;
         color: white;
         padding: 10px;
-        margin-bottom: 20px;
         border-radius: 8px;
       }
 
       #live {
-        display: block;
         text-align: center;
-        font-size: 18px;
+        font-size: 16px;
         color: green;
-        margin: 10px 0;
+        margin: 8px 0;
       }
 
       .message-input {
         display: flex;
-        margin-top: 20px;
         gap: 10px;
+        margin-top: auto;
       }
 
       #message {
@@ -62,18 +63,13 @@
         outline: none;
       }
 
-      #message:focus {
-        border-color: #007bff;
-      }
-
       #send {
-        padding: 10px 20px;
+        padding: 10px 15px;
         background-color: #007bff;
         color: white;
         border: none;
         border-radius: 5px;
         cursor: pointer;
-        font-size: 16px;
       }
 
       #send:hover {
@@ -81,10 +77,9 @@
       }
 
       #messages {
-        margin-top: 20px;
-        max-height: 300px;
+        margin-top: 10px;
         overflow-y: auto;
-        padding-right: 5px;
+        flex-grow: 1;
         scroll-behavior: smooth;
       }
 
@@ -94,13 +89,13 @@
       }
 
       .message-item {
-        margin-bottom: 15px;
+        margin-bottom: 10px;
         padding: 10px 15px;
         border-radius: 8px;
         position: relative;
         word-wrap: break-word;
         max-width: 75%;
-        font-size: 15px;
+        font-size: 14px;
         line-height: 1.4;
       }
 
@@ -130,82 +125,193 @@
         background-color: #007bff;
         border-radius: 10px;
       }
+
+      @media (max-width: 500px) {
+        .chat-container {
+          padding: 10px;
+        }
+
+        .message-item {
+          font-size: 13px;
+        }
+
+        #send {
+          font-size: 14px;
+        }
+
+        #message {
+          font-size: 14px;
+        }
+      }
+
+      /* Modal for name input */
+      #nameModal {
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        width: 100vw;
+        background: rgba(0, 0, 0, 0.6);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 999;
+      }
+
+      #nameForm {
+        background: white;
+        padding: 20px 30px;
+        border-radius: 10px;
+        text-align: center;
+      }
+
+      #nameInput {
+        padding: 10px;
+        width: 100%;
+        margin-top: 10px;
+        font-size: 16px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+      }
+
+      #submitName {
+        margin-top: 15px;
+        padding: 10px 20px;
+        background-color: #007bff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
-    <div class="chat-container">
+    <div id="nameModal">
+      <form id="nameForm" onsubmit="setName(event)">
+        <h2>Enter your name</h2>
+        <input type="text" id="nameInput" placeholder="Your name" required />
+        <br />
+        <button type="submit" id="submitName">Join Chat</button>
+      </form>
+    </div>
+
+    <div class="chat-container" id="chatContainer" style="display: none">
       <h1>Live Chatroom</h1>
       <span id="live">Active Users: 0</span>
+
+      <div id="messages">
+        <ul id="messageList"></ul>
+      </div>
 
       <div class="message-input">
         <input type="text" id="message" placeholder="Enter your message" />
         <button id="send" onclick="sendMessage()">Send</button>
       </div>
-
-      <div id="messages">
-        <ul id="messageList"></ul>
-      </div>
     </div>
 
+    <!-- Optional sound for ping -->
+    <audio id="ping" src="ping.mp3" preload="auto"></audio>
+
     <script>
-      let socket = new WebSocket(`ws://localhost:8080/ws/chat`);
+      let socket;
       let myName = "";
 
-      socket.onopen = () => {
-        myName = prompt("Enter your name: ");
-        socket.send(JSON.stringify({ type: "init", customName: myName }));
-        socket.send(JSON.stringify({ action: "getConnectionCount" }));
+      window.onload = () => {
+        document.getElementById("nameInput").focus();
       };
 
+      function setName(e) {
+        e.preventDefault();
+        const input = document.getElementById("nameInput");
+        myName = input.value.trim();
+        if (!myName) return;
 
-      socket.onmessage = (event) => {
-        try {
-          const data = JSON.parse(event.data);
+        document.getElementById("nameModal").style.display = "none";
+        document.getElementById("chatContainer").style.display = "flex";
 
-          if (data.from && data.message) {
-            const li = document.createElement("li");
-            li.className = `message-item ${
-              data.from === myName ? "mine" : "theirs"
-            }`;
+        socket = new WebSocket("ws://localhost:8080/ws/chat");
 
-            const now = new Date();
-            const time = now.toLocaleTimeString([], {
-              hour: "2-digit",
-              minute: "2-digit",
-            });
-            const date = now.toLocaleDateString();
+        socket.onopen = () => {
+          socket.send(JSON.stringify({ type: "init", customName: myName }));
+          socket.send(JSON.stringify({ action: "getConnectionCount" }));
 
-            li.innerHTML = `
-              <strong>${data.from}</strong>: ${data.message}
-              <div class="timestamp">${date} ${time}</div>
-            `;
+          // Focus on message input
+          setTimeout(() => {
+            document.getElementById("message").focus();
+          }, 100);
+        };
 
-            document.getElementById("messageList").appendChild(li);
-            autoScrollToBottom();
+        socket.onmessage = (event) => {
+          try {
+            const data = JSON.parse(event.data);
+
+            if (data.from && data.message) {
+              const li = document.createElement("li");
+              li.className = `message-item ${
+                data.from === myName ? "mine" : "theirs"
+              }`;
+
+              const now = new Date();
+              const time = now.toLocaleTimeString([], {
+                hour: "2-digit",
+                minute: "2-digit",
+              });
+              const date = now.toLocaleDateString();
+
+              li.innerHTML = `<strong>${data.from}</strong>: ${data.message}
+                              <div class="timestamp">${date} ${time}</div>`;
+              document.getElementById("messageList").appendChild(li);
+              autoScrollToBottom();
+
+              if (data.from !== myName) {
+                document.getElementById("ping").play();
+              }
+            }
+
+            if (
+              data.from === "server" &&
+              data.activeConnections !== undefined
+            ) {
+              document.getElementById("live").textContent = `Active Users: ${
+                data.activeConnections - 1
+              }`;
+            }
+          } catch (error) {
+            console.error("Error parsing message:", error);
           }
-
-          if (data.from === "server" && data.activeConnections !== undefined) {
-            document.getElementById(
-              "live"
-            ).textContent = `Active Users: ${data.activeConnections - 1}`;
-          }
-        } catch (error) {
-          console.error("Error parsing message as JSON:", error);
-        }
-      };
+        };
+      }
 
       function sendMessage() {
-        const message = document.getElementById("message").value;
-        if (message.trim() !== "") {
-          socket.send(message);
-          document.getElementById("message").value = "";
-        }
+        const input = document.getElementById("message");
+        const message = input.value.trim();
+        if (!message) return;
+
+        socket.send(message);
+        input.value = "";
+        input.focus(); // Refocus on message input
       }
 
       function autoScrollToBottom() {
-        const messagesContainer = document.getElementById("messages");
-        messagesContainer.scrollTop = messagesContainer.scrollHeight;
+        const container = document.getElementById("messages");
+        container.scrollTop = container.scrollHeight;
       }
+
+      // Enter key submits name form
+      document.getElementById("nameInput").addEventListener("keydown", (e) => {
+        if (e.key === "Enter") {
+          e.preventDefault();
+          setName(e);
+        }
+      });
+
+      // Enter key sends message
+      document.getElementById("message").addEventListener("keydown", (e) => {
+        if (e.key === "Enter") {
+          e.preventDefault();
+          sendMessage();
+        }
+      });
     </script>
   </body>
 </html>
