--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live Chatroom</title>
     <style>
       * {
@@ -81,7 +81,7 @@
         overflow-y: auto;
         flex-grow: 1;
         scroll-behavior: smooth;
-        min-height: 0; /* Ensure the container resizes correctly */
+        min-height: 0;
       }
 
       #messageList {
@@ -127,24 +127,6 @@
         border-radius: 10px;
       }
 
-      @media (max-width: 500px) {
-        .chat-container {
-          padding: 10px;
-        }
-
-        .message-item {
-          font-size: 13px;
-        }
-
-        #send {
-          font-size: 14px;
-        }
-
-        #message {
-          font-size: 14px;
-        }
-      }
-
       /* Modal for name input */
       #nameModal {
         position: fixed;
@@ -184,6 +166,67 @@
         border-radius: 5px;
         cursor: pointer;
       }
+
+      /* Mobile responsiveness */
+      @media (max-width: 600px) {
+        .chat-container {
+          height: 100vh; /* Make the chat container fill the full screen */
+          padding: 10px;
+        }
+
+        #message {
+          font-size: 14px;
+        }
+
+        #send {
+          font-size: 14px;
+        }
+
+        .message-item {
+          font-size: 13px;
+        }
+
+        .message-input {
+          flex-direction: column;
+          gap: 5px;
+        }
+
+        #message {
+          width: 100%;
+        }
+
+        #send {
+          width: 100%;
+          padding: 10px;
+        }
+
+        #live {
+          font-size: 14px;
+        }
+      }
+
+      @media (max-width: 400px) {
+        h1 {
+          font-size: 18px;
+          padding: 8px;
+        }
+
+        .message-item {
+          font-size: 12px;
+        }
+
+        #message {
+          font-size: 13px;
+        }
+
+        #send {
+          font-size: 14px;
+        }
+
+        #messageList {
+          max-height: 60vh; /* Restrict message list height on very small screens */
+        }
+      }
     </style>
   </head>
   <body>
@@ -196,7 +239,7 @@
       </form>
     </div>
 
-    <div class="chat-container" id="chatContainer" style="display: none;">
+    <div class="chat-container" id="chatContainer" style="display: none">
       <h1>Live Chatroom</h1>
       <span id="live">Active Users: 0</span>
 
@@ -230,7 +273,13 @@
         document.getElementById("nameModal").style.display = "none";
         document.getElementById("chatContainer").style.display = "flex";
 
-        socket = new WebSocket("ws://localhost:8080/ws/chat");
+        // Initialize the WebSocket correctly
+        socket =
+          window.location.hostname === "localhost"
+            ? new WebSocket("ws://localhost:8080/ws/chat") // Development (local)
+            : new WebSocket(
+                "wss://live-chatroom-production.up.railway.app/ws/chat"
+              );
 
         socket.onopen = () => {
           socket.send(JSON.stringify({ type: "init", customName: myName }));
@@ -245,17 +294,33 @@
         socket.onmessage = (event) => {
           try {
             const data = JSON.parse(event.data);
+            console.log("Raw data:", event.data);
+            console.log("Parsed data:", data);
 
-            if (data.from && data.message) {
+            let messageContent;
+
+            try {
+              const parsedMessage = JSON.parse(data.message);
+              messageContent = parsedMessage.message;
+            } catch (e) {
+              messageContent = data.message;
+            }
+
+            if (data.from && messageContent) {
               const li = document.createElement("li");
-              li.className = `message-item ${data.from === myName ? "mine" : "theirs"}`;
+              li.className = `message-item ${
+                data.from === myName ? "mine" : "theirs"
+              }`;
 
               const now = new Date();
-              const time = now.toLocaleTimeString([], { hour: "2-digit", minute: "2-digit" });
+              const time = now.toLocaleTimeString([], {
+                hour: "2-digit",
+                minute: "2-digit",
+              });
               const date = now.toLocaleDateString();
 
-              li.innerHTML = `<strong>${data.from}</strong>: ${data.message}
-                              <div class="timestamp">${date} ${time}</div>`;
+              li.innerHTML = `<strong>${data.from}</strong>: ${messageContent}
+        <div class="timestamp">${date} ${time}</div>`;
               document.getElementById("messageList").appendChild(li);
               autoScrollToBottom();
 
@@ -264,8 +329,13 @@
               }
             }
 
-            if (data.from === "server" && data.activeConnections !== undefined) {
-              document.getElementById("live").textContent = `Active Users: ${data.activeConnections - 1}`;
+            if (
+              data.from === "server" &&
+              data.activeConnections !== undefined
+            ) {
+              document.getElementById("live").textContent = `Active Users: ${
+                data.activeConnections - 1
+              }`;
             }
           } catch (error) {
             console.error("Error parsing message:", error);
@@ -282,7 +352,7 @@
         const message = input.value.trim();
         if (!message) return;
 
-        socket.send(message);
+        socket.send(JSON.stringify({ from: myName, message })); // Sending the message as JSON
         input.value = "";
 
         // Refocus on message input with a slight delay
